1. Fix issue: export button position not align to table. 2. Fix paging-service not able to return totalPages 8 and 9 cases. 3. Add more unit test to Paging component.

--- a/client-app/auditlog/auditlog.less
+++ b/client-app/auditlog/auditlog.less
@@ -171,6 +171,7 @@
 
 	.vertical-gap {
 		padding-top: 30px;
+		margin: 0 30px;
 	}
 
 	.search-table-gap {
